[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ressources/Theme.theme" type="Theme" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Ressources/Roboto-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
outline_color = Color( 1, 0.564706, 0, 1 )
extra_spacing_char = 8
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.90678, 1 )
colors = PoolColorArray( 0.145098, 0.145098, 0.164706, 1, 1, 0.564706, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = SubResource( 3 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="Menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ContainerGlobal" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -1

[node name="Label" type="Label" parent="ContainerGlobal"]
margin_right = 1920.0
margin_bottom = 118.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Re.FOUND"
align = 1
valign = 1

[node name="NetworkContainer" type="HBoxContainer" parent="ContainerGlobal"]
margin_top = 117.0
margin_right = 1920.0
margin_bottom = 1052.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="ContainerGlobal/NetworkContainer"]
margin_right = 1920.0
margin_bottom = 935.0
size_flags_horizontal = 3
tab_align = 0
drag_to_rearrange_enabled = true

[node name="Join" type="Tabs" parent="ContainerGlobal/NetworkContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 47.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Join"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2"]
margin_left = 839.0
margin_right = 1073.0
margin_bottom = 884.0
alignment = 1

[node name="Ip" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer"]
margin_top = 370.0
margin_right = 234.0
margin_bottom = 409.0
alignment = 1

[node name="Ip_label" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Ip"]
margin_top = 10.0
margin_right = 67.0
margin_bottom = 29.0
text = "Server IP"

[node name="ip" type="LineEdit" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Ip"]
margin_left = 71.0
margin_right = 234.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "192.168.1.22"
max_length = 12
expand_to_text_length = true

[node name="Port" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer"]
margin_top = 413.0
margin_right = 234.0
margin_bottom = 452.0
alignment = 1

[node name="Port_label" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Port"]
margin_top = 10.0
margin_right = 83.0
margin_bottom = 29.0
text = "Server Port"

[node name="port" type="LineEdit" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Port"]
margin_left = 87.0
margin_right = 234.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "4242"
align = 1
max_length = 5
expand_to_text_length = true

[node name="Join" type="Button" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer"]
margin_top = 456.0
margin_right = 234.0
margin_bottom = 491.0
text = "Join"

[node name="Status" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer"]
margin_top = 495.0
margin_right = 234.0
margin_bottom = 514.0
custom_colors/font_color = Color( 1, 0.564706, 0, 1 )
align = 1
autowrap = true

[node name="Host" type="Tabs" parent="ContainerGlobal/NetworkContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 47.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer"]
margin_left = 814.0
margin_right = 1097.0
margin_bottom = 884.0
size_flags_vertical = 3
alignment = 1

[node name="Port" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 381.0
margin_right = 283.0
margin_bottom = 420.0
alignment = 1

[node name="Label" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/Port"]
margin_top = 10.0
margin_right = 50.0
margin_bottom = 29.0
text = "PORT :"

[node name="SpinBox" type="SpinBox" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/Port"]
margin_left = 54.0
margin_right = 283.0
margin_bottom = 39.0
size_flags_horizontal = 3
max_value = 9999.0
value = 4242.0

[node name="PlayerNumber" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer"]
margin_top = 424.0
margin_right = 283.0
margin_bottom = 463.0
alignment = 1

[node name="Label" type="Label" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/PlayerNumber"]
margin_top = 10.0
margin_right = 116.0
margin_bottom = 29.0
text = "PLAYER NAME  "

[node name="player_name" type="LineEdit" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/PlayerNumber"]
margin_left = 120.0
margin_right = 283.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Player 1"
max_length = 12
expand_to_text_length = true

[node name="Host" type="Button" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer"]
margin_top = 467.0
margin_right = 283.0
margin_bottom = 502.0
text = "Host"

[node name="Lobby" type="HBoxContainer" parent="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 125.0
margin_right = 230.0
margin_bottom = 884.0
size_flags_vertical = 3

[node name="Quit" type="Button" parent="ContainerGlobal"]
margin_top = 1051.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Quit"
align = 2
[connection signal="pressed" from="ContainerGlobal/NetworkContainer/TabContainer/Join/HBoxContainer2/VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="ContainerGlobal/NetworkContainer/TabContainer/Host/HBoxContainer/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="ContainerGlobal/Quit" to="." method="_on_Quit_pressed"]
